# awlib

./: .gitignore  BUILD.md  CMakeLists.txt  Config.mk  Doxyfile  GUIDELINES.md  Makefile  README.md  RTS-Game.sln  Rules.mk  dispatch.bat  gentags.sh  hrengin.sln  movebinaries.bat  premake.lua  premake4.lua  premake5.lua  todolist.md
algorithm/: CMakeLists.txt
algorithm/tests/: CMakeLists.txt  Makefile  astar.c++  common_prefix.c++  exchange.c++  join.c++  shift.c++  split.c++
archive/: CMakeLists.txt
archive/test/: CMakeLists.txt  archive.c++
assert/: CMakeLists.txt
assert/include/aw/: assert.h
assert/source/: assert_handler.c++
assert/source/posix/: debugger.c++
assert/source/win32/: assert_fail.c++  debugger.c++
assert/tests/: CMakeLists.txt  assert.c++  cassert_included_after.c++  cassert_included_before.c++
awstd/: CMakeLists.txt  Readme.md
awstd/include/awstd/: filesystem  nullptr  source_location  string_view
awstd/source/C++14/: posix_fsops.c++  win32_fsops.c++
awstd/source/C++98/: Makefile  fspath.c++
awstd/tests/: CMakeLists.txt
doc/: CMakeLists.txt  utility.c++
doc/docs/: format.md
doc/tests/: CMakeLists.txt  Makefile  reader.c++
fileformat/: CMakeLists.txt
fileformat/hpacker/: HPKHtableWriter.h  ItdReader.h  StringBank.h  hpacker.h
fileformat/hudf/: CMakeLists.txt  document.c++  lexer.c++  parser.c++  utility.c++  writer.c++
fileformat/hudf/tests/: CMakeLists.txt  reader.c++  writer.c++
fileformat/image/: CMakeLists.txt
fileformat/mesh/: CMakeLists.txt  obj_loader.c++  shared.h
fileformat/sound/: CMakeLists.txt  wav_reader.cpp
fileformat/sound/tests/: CMakeLists.txt  wav_reader.c++
graphics/: CMakeLists.txt  Makefile
graphics/gl/: CMakeLists.txt  enum_check.c++  gl_api.c++  loader.c++
graphics/gl3/: program.c++  resources.c++  shader.c++  uniform.c++
graphics/glloadgen/: make_distro.lua
graphics/glloadgen/data/: gl_specversions.lua
graphics/glloadgen/glspecs/: glspec.lua  glxspec.lua  wglspec.lua
graphics/glloadgen/modules/: awlib_Struct.lua
graphics/meshes/: CMakeLists.txt  Makefile  mtl_loader.c++  obj_loader.c++  png_loader.c++  shared.h
graphics/renderer/: CMakeLists.txt
graphics/renderer/gl3/: material.c++  model.c++  program.c++  program_manager.c++  render_context.c++  resources.c++  shader.c++  texture.c++  uniform.c++
graphics/test/: CMakeLists.txt  Makefile  main.c++  renderer.c++  scene.c++  scene.txt
graphics/test/shaders/: f_txa.glsl  f_txad.glsl  l_light.glsl  v_txa.glsl
io/: CMakeLists.txt  Makefile
io/posix/: file.c++  file.cpp  mmap.c++  process.c++
io/tests/: CMakeLists.txt  Makefile  buffer.cpp  istream_adapter.cpp  main.cpp  process.c++
io/tests/process/: dump_args.c++
io/win32/: error_codes.c++  file.c++  mmap.c++  path.h  process.c++  winapi_category.c++  winapi_helpers.h
log/: CMakeLists.txt  log_base.c++
log/tests/: CMakeLists.txt  log_filter.c++  log_tester.h
lua/: CMakeLists.txt  metatable_utils.c++
lua/tests/: CMakeLists.txt  main.c++
math/: CMakeLists.txt
math/tests/: CMakeLists.txt  Makefile  angle.c++  matrix.c++  matrix3.c++  matrix4.c++  orientation.c++  vector.c++
meta/tests/: CMakeLists.txt  at_index.c++  eat_paren.c++  expand.c++  find_index.c++  find_type.c++  fold.c++  is_same.c++  source_location.c++
meta/tests/pp/: eat_paren.c++  foldl.c++  foldr.c++  helpers.h  macro.c++  repeat.c++  reverse.c++  struct.c++  tuple.c++  tuple_fold.c++
meta/tests/v2/: contains.c++
platform/: CMakeLists.txt  Makefile  demangle.c++  os_version.c++
platform/posix/: process.c++
platform/tests/: CMakeLists.txt  demangle.x86_64abi.c++  demangle.x86_64abi.h  mmap_file.c++  native_file.c++  os_version.c++
platform/win32/: file.c++  mmap.c++  path.h  process.c++  winapi_category.c++  winapi_helpers.h
sound/: CMakeLists.txt
sound/tests/: CMakeLists.txt  wav_reader.cpp
source/archive/: CMakeLists.txt
source/archive/test/: CMakeLists.txt  Makefile  archive.c++  test_archive.h
source/doc/: CMakeLists.txt  Makefile  document.c++  lexer.c++  parser.c++  utility.c++
source/doc/tests/: CMakeLists.txt  Makefile  reader.c++
source/graphics/: CMakeLists.txt  CameraNode.cpp  CameraNode.h  ConsoleGUI.cpp  ConsoleGUI.h  EntityNode.cpp  EntityNode.h  GUIListBox.cpp  GUIListBox.h  GUITextBox.cpp  GUITextBox.h  GUIWindow.cpp  GUIWindow.h  GuiManager.cpp  GuiManager.h  InputManager.cpp  InputManager.h  IrrDummyNode.h  LightNode.cpp  LightNode.h  Makefile  Node.h  RenderingDevice.cpp  RenderingDevice.h  SceneManager.cpp  SceneManager.h  VideoManager.cpp  VideoManager.h  VisNode.cpp  VisNode.h
source/graphics/gl/: gl_api.c++  gl_ext45.c++  loader.c++  loader.h  types.h
source/graphics/gl3/: material.c++  model.c++  program.c++  program.h  program_manager.c++  render_context.c++  resources.c++  shader.c++  shader.h  texture.c++  uniform.c++
source/graphics/meshes/: CMakeLists.txt  Makefile  mtl_loader.c++  obj_loader.c++  png_loader.c++  shared.h
source/graphics/test/: CMakeLists.txt  Makefile  (+12 more)
source/io/: CMakeLists.txt  InputCharStream.cpp  InputFileStream.cpp  Makefile
string/: CMakeLists.txt  Makefile  compose.cpp  repeat.c++  string.c++
string/cmake/: test_stdlib_has_fmt.c++
string/tests/: CMakeLists.txt  Makefile  case.c++  compose.cpp  join.cpp  lazy_split.cpp  misc.cpp  parse.c++  repeat.c++  split.cpp  split_iterator.cpp  to_string.cpp
test/: CMakeLists.txt  always_fail.cpp
test/test_runner/: CMakeLists.txt  main.c++
test/tests/: CMakeLists.txt  always_fail.c++  assertions.c++
thread/: CMakeLists.txt  Makefile  worker.c++
types/: CMakeLists.txt
types/tests/: CMakeLists.txt  Makefile  any_buffer.c++  array_view.c++  circular_buffer.c++  compint.c++  tmpflag.c++  traits_promote.c++  variant.c++  variant_converter.c++
utility/: CMakeLists.txt  argv_parser.c++  murmur_hash3.c++  pool.c++
utility/tests/: CMakeLists.txt  MurmurHash3.c++  arg_parser.c++  functional.c++  hash_combine.c++  on_scope_exit.c++  ranges_ipairs.c++  ranges_paired.c++  ranges_slice.c++  ranges_zip.c++  static_object.c++  type_name.c++  utf8toutf16.c++
(+2080 files in other folders)
