aw_add_test(test_meta
	SOURCES
	main.c++
	at_index.c++
	expand.c++
	find_index.c++
	find_type.c++
	fold.c++
	source_location.c++
	pp/helpers.h
	pp/eat_paren.c++
	pp/foldl.c++
	pp/foldr.c++
	pp/macro.c++
	pp/tuple.c++
	pp/tuple_fold.c++
	pp/repeat.c++
	pp/reverse.c++
	pp/struct.c++
)

target_link_libraries(test_meta
	PRIVATE
		awmeta
		awtest)
